@@ -5,6 +5,15 @@ RSpec.describe DeliveryBoy::Instance do
   let(:config) { DeliveryBoy::Config.new }
   let(:instance) { DeliveryBoy::Instance.new(config, logger) }
 
+  describe "#buffer_size" do
+    it "returns the number of messages in the buffer" do
+      instance.produce("hello", topic: "greeting")
+      instance.produce("world", topic: "greeting")
+
+      expect(instance.buffer_size).to eq 2
+    end
+  end
+
   describe "#deliver" do
     it "delivers a message to Kafka" do
       instance.deliver("hello", topic: "greetings")
